<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/screen_background_light"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorBackground">

        <ImageView
            android:id="@+id/headerImageView"
            android:layout_width="0dp"
            android:layout_height="240dp"
            android:contentDescription="@string/header_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/peach" />

        <ImageView
            android:id="@+id/subheader"
            android:layout_width="0dp"
            android:layout_height="240dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/sub_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profilePic"
            app:srcCompat="@drawable/dark_image_bg" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/lilo_pelekai"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/fullname"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePic" />

        <TextView
            android:id="@+id/profession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profession"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullName" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/description"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profession" />

        <ImageView
            android:id="@+id/playstore"
            android:layout_width="@dimen/logo_dim"
            android:layout_height="@dimen/logo_dim"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/play_store"
            app:layout_constraintEnd_toEndOf="@+id/playstoreTextView"
            app:layout_constraintStart_toStartOf="@+id/playstoreTextView"
            app:layout_constraintTop_toBottomOf="@+id/subheader"
            app:srcCompat="@drawable/ic_play_store" />

        <TextView
            android:id="@+id/playstoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/play_store"
            app:layout_constraintEnd_toStartOf="@+id/githubTextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playstore" />

        <TextView
            android:id="@+id/githubTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/github"
            app:layout_constraintEnd_toStartOf="@+id/bitbucketTextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/playstoreTextView"
            app:layout_constraintTop_toBottomOf="@+id/githubLogo" />

        <TextView
            android:id="@+id/bitbucketTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/bitbucket"
            app:layout_constraintEnd_toStartOf="@+id/facebookTextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/githubTextView"
            app:layout_constraintTop_toBottomOf="@+id/bitbucketLogo" />

        <TextView
            android:id="@+id/facebookTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bitbucketTextView"
            app:layout_constraintTop_toBottomOf="@+id/facebookLogo" />

        <ImageView
            android:id="@+id/githubLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/githubTextView"
            app:layout_constraintStart_toStartOf="@+id/githubTextView"
            app:layout_constraintTop_toTopOf="@+id/playstore"
            app:srcCompat="@drawable/ic_github"
            android:contentDescription="@string/github" />

        <ImageView
            android:id="@+id/bitbucketLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/bitbucketTextView"
            app:layout_constraintStart_toStartOf="@+id/bitbucketTextView"
            app:layout_constraintTop_toTopOf="@+id/githubLogo"
            app:srcCompat="@drawable/ic_bitbucket_logo"
            android:contentDescription="@string/bitbucket" />

        <ImageView
            android:id="@+id/facebookLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/facebookTextView"
            app:layout_constraintStart_toStartOf="@+id/facebookTextView"
            app:layout_constraintTop_toTopOf="@+id/bitbucketLogo"
            app:srcCompat="@drawable/ic_facebook"
            android:contentDescription="@string/bitbucket" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

